--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -11,12 +11,33 @@
         android:orientation="vertical">
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:background="@color/colorPrimary"
-            android:layout_height="50dp">
+            android:gravity="left|center">
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/colorPrimary"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sign Up"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/btn_signup_back"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_back_button" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,8 +53,12 @@
             </TextView>
 
             <EditText
+                android:id="@+id/edt_full_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+                android:maxLength="20"
+                android:maxLines="1" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -43,8 +68,12 @@
             </TextView>
 
             <EditText
+                android:id="@+id/edt_mobileno"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:maxLength="10"
+                android:maxLines="1" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -54,8 +83,12 @@
             </TextView>
 
             <EditText
+                android:id="@+id/edt_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:maxLength="20"
+                android:maxLines="1" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -65,8 +98,12 @@
             </TextView>
 
             <EditText
+                android:id="@+id/edt_confirm_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:maxLength="20"
+                android:maxLines="1" />
 
 
             <LinearLayout
@@ -75,9 +112,10 @@
                 android:gravity="center">
 
                 <Button
+                    android:id="@+id/btn_reciveotp"
                     android:layout_width="wrap_content"
-                    android:text="Recive OTP"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="Recive OTP" />
             </LinearLayout>
 
 
