Login Design Changes

--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -39,6 +39,14 @@
         android:layout_height="match_parent"
         android:layout_margin="50dp"
         >
+
+        <TextView
+            android:paddingTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Please enter your register mobile number"
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -51,7 +59,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <Button
+                android:id="@+id/btn_verify_mobile"
                 android:layout_width="match_parent"
+                android:text="Verify Mobile"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
