--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -26,7 +26,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sign Up"
+                    android:text="@string/signup"
                     android:textColor="#ffffff"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -115,7 +115,7 @@
                     android:id="@+id/btn_reciveotp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recive OTP" />
+                    android:text="@string/recive_otp" />
             </LinearLayout>
 
 
